--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # url is the full website URL
 # baseurl is the website's URL without the hostname
 
-url: "https://deanattali.com"
-baseurl: ""
+url: "https://nimdvir.github.io/b-example"
+baseurl: "b-example/"
 
 # Brief name and description of the site
 title: Dean Attali
