--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 url: "https://nimdvir.github.io/b-example"
-baseurl: "b-example/"
+baseurl: "/b-example/"
 
 # Brief name and description of the site
 title: Dean Attali
